# oca-ai

./: README.md
odoo-bringout-oca-ai-ai_oca_bridge/: README.md  pyproject.toml
odoo-bringout-oca-ai-ai_oca_bridge/ai_oca_bridge/i18n/: bs.po
odoo-bringout-oca-ai-ai_oca_bridge/doc/: ARCHITECTURE.md  CONFIGURATION.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-ai-ai_oca_bridge_chatter/: README.md  pyproject.toml
odoo-bringout-oca-ai-ai_oca_bridge_chatter/ai_oca_bridge_chatter/i18n/: bs.po
odoo-bringout-oca-ai-ai_oca_bridge_chatter/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ai-ai_oca_bridge_document_page/: README.md  pyproject.toml
odoo-bringout-oca-ai-ai_oca_bridge_document_page/ai_oca_bridge_document_page/i18n/: bs.po
odoo-bringout-oca-ai-ai_oca_bridge_document_page/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ai-ai_oca_bridge_helpdesk_mgmt/: README.md  pyproject.toml
odoo-bringout-oca-ai-ai_oca_bridge_helpdesk_mgmt/ai_oca_bridge_helpdesk_mgmt/i18n/: bs.po
odoo-bringout-oca-ai-ai_oca_bridge_helpdesk_mgmt/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
